# colshift

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: formats.md
examples/: README.md  drift_demo.sh  make_snapshots.py
scripts/: smoke.sh
src/colshift/: __init__.py  __main__.py  cli.py  drift.py  errors.py  inference.py  loaders.py  profiles.py  psi.py  report.py  stats.py
tests/: conftest.py  test_cli.py  test_drift.py  test_inference.py  test_loaders.py  test_profiles.py  test_psi.py  test_report.py  test_stats.py
